--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@
   <section id="results"></section>
 
   <!-- One script, with cache-bust -->
-  <script src="recommends.js?v=12" defer></script>
+  <script src="recommend.js?v=12" defer></script>
 </body>
 </html>
